--- a/bmin_content_element/Resources/Private/Language/Tca.xlf
+++ b/bmin_content_element/Resources/Private/Language/Tca.xlf
@@ -3,29 +3,29 @@
   <file source-language="en" datatype="plaintext" original="messages" date="2012-06-05T10:52:05Z" product-name="tx_websitekonzertgesellschaft">
     <header/>
     <body>
-      <trans-unit id="bmin_content_element_my_content_element.wizard.title">
-        <source>My Custom Content Element Title #100</source>
+      <trans-unit id="bmin_content_element.ce_lucky_number.wizard.title">
+        <source>Lucky Number #100</source>
       </trans-unit>
 
-      <trans-unit id="bmin_content_element_my_content_element.wizard.description">
-        <source>Description of My Custom Content Element #110</source>
-      </trans-unit>
-
-
-      <trans-unit id="bmin_content_element_my_content_element.type_dropdown.title">
-        <source>My Custom Content Element in after textmedia  #150</source>
-      </trans-unit>
-      <trans-unit id="bmin_content_element_my_content_element.type_dropdown.title2">
-        <source>My Custom Content Element in my my_ce_category #180</source>
-      </trans-unit>
-
-      <trans-unit id="bmin_content_element_my_content_element.type_dropdown.my_category">
-        <source>My Dropdown Category/Section #170</source>
+      <trans-unit id="bmin_content_element.ce_lucky_number.wizard.description">
+        <source>Show the visitor his lucky number #110</source>
       </trans-unit>
 
 
-      <trans-unit id="bmin_content_element_my_content_element.my_ce_category.title">
-        <source>My Custom Category/Section #200</source>
+      <trans-unit id="bmin_content_element.ce_lucky_number.type_dropdown.title">
+        <source>Lucky Number (after textmedia)  #150</source>
+      </trans-unit>
+      <trans-unit id="bmin_content_element.ce_lucky_number.type_dropdown.title2">
+        <source>Lucky Number (in random_category) #180</source>
+      </trans-unit>
+
+      <trans-unit id="bmin_content_element.ce_category.type_dropdown.title">
+        <source>Random Content Elements #170</source>
+      </trans-unit>
+
+
+      <trans-unit id="bmin_content_element.ce_category.new_ce_wizzard.title">
+        <source>Random Content Elements #200</source>
       </trans-unit>
 
 
