--- a/bmin_content_element/Resources/Private/Language/Tca.xlf
+++ b/bmin_content_element/Resources/Private/Language/Tca.xlf
@@ -24,7 +24,7 @@
       </trans-unit>
 
 
-      <trans-unit id="bmin_content_element.ce_category.new_ce_wizzard.title">
+      <trans-unit id="bmin_content_element.ce_category.new_ce_wizard.title">
         <source>Random Content Elements #200</source>
       </trans-unit>
 
